--- a/src/Modbus.Tcp/Modbus.Tcp.csproj
+++ b/src/Modbus.Tcp/Modbus.Tcp.csproj
@@ -2,18 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>0.9.0</Version>
     <Authors>Andreas Müller</Authors>
     <Company />
     <Product>Modbus.TCP</Product>
     <Description>Small library to connect via Modbus TCP on remote devices.</Description>
-    <Copyright>Copyright (c) 2017 Andreas Müller</Copyright>
-    <PackageLicenseUrl>https://github.com/BlackyPanther/Modbus/blob/master/LICENSE.txt</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/BlackyPanther/Modbus</PackageProjectUrl>
-    <RepositoryUrl />
-    <PackageTags>Modbus</PackageTags>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Copyright>Copyright (c) 2018 Andreas Müller</Copyright>
+    <PackageLicenseUrl>https://github.com/AndreasAmMueller/Modbus/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/AndreasAmMueller/Modbus</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/AndreasAmMueller/Modbus.git</RepositoryUrl>
+    <PackageTags>Modbus, TCP</PackageTags>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageId>AMWD.Modbus.Tcp</PackageId>
+    <AssemblyName>AMWD.Modbus.Tcp</AssemblyName>
+    <RootNamespace>AMWD.Modbus.Tcp</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,6 +42,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Modbus.Common\Modbus.Common.csproj" />
   </ItemGroup>
