NuGet license error change
https://github.com/NuGet/Home/wiki/Packaging-License-within-the-nupkg#project-properties

--- a/src/Modbus.Common/Modbus.Common.csproj
+++ b/src/Modbus.Common/Modbus.Common.csproj
@@ -11,6 +11,7 @@
     <Copyright>Copyright (c) 2018 Andreas Müller</Copyright>
     <RepositoryUrl>https://github.com/AndreasAmMueller/Modbus.git</RepositoryUrl>
     <PackageTags>Modbus</PackageTags>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageId>AMWD.Modbus.Common</PackageId>
     <AssemblyName>AMWD.Modbus.Common</AssemblyName>
@@ -52,6 +53,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Unclassified.NetRevisionTask" Version="0.2.2-beta" PrivateAssets="all" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
