--- a/src/ConsoleDemo/ConsoleDemo.csproj
+++ b/src/ConsoleDemo/ConsoleDemo.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Modbus.Tcp\Modbus.Tcp.csproj" />
   </ItemGroup>
 
