--- a/src/Modbus.Common/Modbus.Common.csproj
+++ b/src/Modbus.Common/Modbus.Common.csproj
@@ -52,7 +52,8 @@
     <DocumentationFile>$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.2.2-beta" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.2" />
+    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.2.5" PrivateAssets="all" />
   </ItemGroup>
   
   <ItemGroup>
