--- a/src/Modbus.Serial/Modbus.Serial.csproj
+++ b/src/Modbus.Serial/Modbus.Serial.csproj
@@ -53,8 +53,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="System.IO.Ports" Version="4.5.0" />
-    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.2.2-beta" PrivateAssets="all" />
+    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.2.5" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
