--- a/src/ConsoleDemo/ConsoleDemo.csproj
+++ b/src/ConsoleDemo/ConsoleDemo.csproj
@@ -6,10 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Modbus.Serial\Modbus.Serial.csproj" />
     <ProjectReference Include="..\Modbus.Tcp\Modbus.Tcp.csproj" />
   </ItemGroup>
 
