--- a/src/Modbus.Serial/Modbus.Serial.csproj
+++ b/src/Modbus.Serial/Modbus.Serial.csproj
@@ -53,17 +53,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.2" />
-    <PackageReference Include="System.IO.Ports" Version="4.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+    <PackageReference Include="System.IO.Ports" Version="4.6.0-preview3.19128.7" />
     <PackageReference Include="Unclassified.NetRevisionTask" Version="0.2.5" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Modbus.Common\Modbus.Common.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
