--- a/src/Modbus.Tcp/Modbus.Tcp.csproj
+++ b/src/Modbus.Tcp/Modbus.Tcp.csproj
@@ -13,6 +13,7 @@
     <PackageId>AMWD.Modbus.Tcp</PackageId>
     <AssemblyName>AMWD.Modbus.Tcp</AssemblyName>
     <RootNamespace>AMWD.Modbus.Tcp</RootNamespace>
+	<LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <NrtRevisionFormat>{semvertag}</NrtRevisionFormat>
