Reconnection parameters must allow changing timeout and change the opportunity of endless reconnection. I changed the constructor of ModbusClient (TCP). Now consumers can choose reconnection parameters if they want. If they don't want to change it, it stays by default.

--- a/src/Modbus.Tcp/Modbus.Tcp.csproj
+++ b/src/Modbus.Tcp/Modbus.Tcp.csproj
@@ -48,4 +48,8 @@
     <ProjectReference Include="..\Modbus.Common\Modbus.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Client\" />
+  </ItemGroup>
+
 </Project>
