License Information or NuGet Package added

--- a/src/Modbus.Proxy/Modbus.Proxy.csproj
+++ b/src/Modbus.Proxy/Modbus.Proxy.csproj
@@ -14,6 +14,7 @@
     <AssemblyName>AMWD.Modbus.Proxy</AssemblyName>
     <RootNamespace>AMWD.Modbus.Proxy</RootNamespace>
     <NrtRevisionFormat>{semvertag:master}</NrtRevisionFormat>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
