--- a/src/Modbus.Common/Modbus.Common.csproj
+++ b/src/Modbus.Common/Modbus.Common.csproj
@@ -11,6 +11,7 @@
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.9.0</Version>
 
     <PackageId>AMWD.Modbus.Common</PackageId>
     <Product>Modbus.Common</Product>
