--- a/src/Modbus.Proxy/Modbus.Proxy.csproj
+++ b/src/Modbus.Proxy/Modbus.Proxy.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Modbus.Serial\Modbus.Serial.csproj" />
     <ProjectReference Include="..\Modbus.Tcp\Modbus.Tcp.csproj" />
   </ItemGroup>
 
