--- a/src/Modbus.Proxy/Modbus.Proxy.csproj
+++ b/src/Modbus.Proxy/Modbus.Proxy.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>9.0</LangVersion>
 
     <AssemblyName>AMWD.Modbus.Proxy</AssemblyName>
     <RootNamespace>AMWD.Modbus.Proxy</RootNamespace>
-    <NrtRevisionFormat>{semvertag:master}</NrtRevisionFormat>
+    <NrtRevisionFormat>{semvertag:master}{!:-mod}</NrtRevisionFormat>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
-    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.3.0">
+    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
