--- a/.editorconfig
+++ b/.editorconfig
@@ -143,6 +143,6 @@ csharp_space_between_method_declaration_parameter_list_parentheses = false
 csharp_space_between_parentheses = false
 csharp_space_between_square_brackets = false
 
-[*.{xml,csproj,targets,props,json}]
+[*.{xml,csproj,targets,props,json,yml}]
 indent_size = 2
 indent_style = space
