--- a/src/Modbus.Tcp/Modbus.Tcp.csproj
+++ b/src/Modbus.Tcp/Modbus.Tcp.csproj
@@ -6,12 +6,12 @@
 
     <AssemblyName>AMWD.Modbus.Tcp</AssemblyName>
     <RootNamespace>AMWD.Modbus.Tcp</RootNamespace>
-    <NrtRevisionFormat>{semvertag:master}{!:-mod}</NrtRevisionFormat>
+    <NrtRevisionFormat>{semvertag:master}</NrtRevisionFormat>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
 
     <PackageId>AMWD.Modbus.Tcp</PackageId>
     <Product>Modbus.TCP</Product>
