Add Serial Over TCP client

--- a/src/ConsoleDemo/ConsoleDemo.csproj
+++ b/src/ConsoleDemo/ConsoleDemo.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Modbus.SerialOverTCP\Modbus.SerialOverTCP.csproj" />
     <ProjectReference Include="..\Modbus.Serial\Modbus.Serial.csproj" />
     <ProjectReference Include="..\Modbus.Tcp\Modbus.Tcp.csproj" />
   </ItemGroup>
